# sm-bootloader

./: README.md  sm-bootloader.code-workspace
config/32F0308DISCOVERY/: FreeRTOSConfig.h  target_cfg.h
config/BlackPill_STM32F411CEU6/: FreeRTOSConfig.h
doc/: interface description.docx
hw/32F0308DISCOVERY/: CMakeLists.txt  STM32F030R8_FLASH.ld  hw_init.c  readme.txt
hw/BlackPill_STM32F411CEU6/: CMakeLists.txt  STM32F411.svd  hw_init.c  readme.txt
hw/BlackPill_STM32F411CEU6/include/: stm32f4xx.h
inc/: boot_cfg.h  bootloader.h  com.h  common.h  readme.txt  rtos.h
snippets/: target_cfg.h
src/: CMakeLists.txt  bootloader.c  com.c  readme.txt
